# dockerized-gcp-etl

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: deploy-images-prod.yaml  deploy-images-rnd.yaml  deploy-terraform-prod.yaml  deploy-terraform-rnd.yaml
app/loader/: ingest.py  process_visits.py
app/utils/: gcp_client.py  schema.py
sql_models/: network_based1.sql  network_visits_combo2.sql  network_visits_combo3.sql  visit_based1.sql  visit_based2.sql
src/: main.py  settings.py
src/scripts/: run_local_pipeline.py
src/utils/: gcp_client.py  logger.py
src/visits/: pipeline.py  transform.py
src/visits_dataset/: schema.py
terraform/: bigquery.tf  cloud-run.tf  gcp-setup.tf  main.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/enviroments/prod/: main.tf  variables.tf
terraform/enviroments/rnd/: main.tf  variables.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/modules/project-setup/: main.tf  outputs.tf  variables.tf
terraform/schemas/: dq_visits_information.json
