[project]
name = "project-sat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud>=0.34.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "ruff>=0.13.0",
]

[dependency-groups]
dev = [
    "pathlib>=1.0.1",
    "polars>=1.33.1",
]
